--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 Hello there, awesome person!
 <html>
+  <head>
+        <title>This Is The Title</title>
+  </head>
+
+  
   <body>
-    Hello there, awesome person! 
+    This is the body text 
   </body>
 </html>
