Added H1 header text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ Hello there, awesome person!
 
   
   <body>
+    </h1>This is Header 1 text<h1>
+           
     This is the body text 
   </body>
 </html>
