--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-Hello there, awesome person!
 <html>
   <head>
         <title>This Is The Title</title>
@@ -6,8 +5,12 @@ Hello there, awesome person!
 
   
   <body>
-    </h1>This is Header 1 text<h1>
+    <header>
+      </h1>This is Header 1 text<h1>
+    <header>
+      
     <img src="https://avatars1.githubusercontent.com/u/58018226?v=4">       
+    
     This is the body text 
   </body>
 </html>
