--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@ Hello there, awesome person!
   <body>
     </h1>This is Header 1 text<h1>
     <img src="https://avatars1.githubusercontent.com/u/58018226?v=4">       
+  
     This is the body text 
+    
+    <ol>  
+      <li>List Item 1</li>
+      <li>List Item 2</li>
+      <li>List Item 3</li>
+  
+  
   </body>
 </html>
