--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@ Hello there, awesome person!
   
   <body>
     </h1>This is Header 1 text<h1>
+    
     <img src="https://avatars1.githubusercontent.com/u/58018226?v=4">       
+  <ol>
+    <li>Item 1<li>
+    <li>Item 2<li>
+    <li>Item 3<li>
+    
     This is the body text 
   </body>
 </html>
