--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ Hello there, awesome person!
     
     <img src="https://avatars1.githubusercontent.com/u/58018226?v=4">       
   <ol>
-    <li>Item 1<li>
-    <li>Item 2<li>
-    <li>Item 3<li>
+    <li>www.google.com<li>
+    <li>www.arstechnica.com<li>
+    <li>www.gizmodo.com<li>
     
     This is the body text 
   </body>
