--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@ Hello there, awesome person!
   
   <body>
     </h1>This is Header 1 text<h1>
-    <img src="https://avatars1.githubusercontent.com/u/58018226?v=4">       
-    This is the body text 
+    
+  <img src="https://avatars1.githubusercontent.com/u/58018226?v=4">       
+  
+  <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+  </ol>
+  
+  This is the body text 
   </body>
 </html>
