--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ Hello there, awesome person!
   <img src="https://avatars1.githubusercontent.com/u/58018226?v=4">       
   
   <ol>
-    <li>This</li>
-    <li>Is an</li>
-    <li>Ordered list</li>
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
+    <li><a href="https://www.google.com">This is a link to Google!</a></li>
+    <li><a href="https://www.arstechnica.com">This is a link to Ars Technica!</a></li>
   </ol>
   
   This is the body text 
