add stylesheet link

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@ Hello there, awesome person!
 <html>
   <head>
         <title>This Is The Title</title>
+        <link rel="stylesheet" href="style.css">
   </head>
 
   
   <body>
+    <header>
     </h1>This is Header 1 text<h1>
-    
+    <header>
+      
   <img src="https://avatars1.githubusercontent.com/u/58018226?v=4">       
   
   <ol>
